# LTC6810-Driver

./: CMakeLists.txt  README.md  build.sh
Inc/: BMS.hpp  Battery.hpp  Cell.hpp  DataManager.hpp  Driver.hpp  LTC6810.hpp  LTC6810Utilities.hpp  NetworkLink.hpp  StateMachine.hpp
Src/: Driver.cpp  StateMachine.cpp
doc/diagrams/src/: test.puml
